--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset=”utf-8”>
 		<title>Ellis Island Emigration</title>	
+		<meta property="og:image" content="sample.jpg" />
 	
 		<!--[if IE]>
 			<script src=”html5shiv.googlecode.com/svn/trunk/html5.js”>
